мелкие поправки после замечаний///

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                 <h4>О компании</h4>
                 <img src="images/page1_img3.jpg" alt="" class="img_inner fleft">
 
-                <p class="brief_description">Мы – команда. Каждый сотрудник нашей компании является состо<wbr/>явшимся
-                    профессионалом в своей области и настоящим знатоком своего дела. Все мы очень разные, но вместе мы –
+                <p class="brief_description"> Каждый сотрудник нашей компании является состоявшимся
+                    профес<wbr/>сионалом в своей области и настоящим знатоком своего дела. Все мы очень разные, но вместе мы –
                     современное рекламное агент<wbr/>ство полного цикла, способное выполнить любую поставленную задачу.</p>
             </div>
             <div class="grid_4">
@@ -190,26 +190,26 @@
               footer
 =================================-->
 <footer id="footer">
-    <div class="container">
-        <div class="row">
-            <div class="grid_8">
-                <div class="copyright"><span class="brand">Лайм Медиа</span> &copy; <span id="copyright-year"></span> |
-                    <a href="#">Все права защищены</a>
-                    <!--<div class="sub-copy">Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>-->
-                </div>
-            </div>
-            <div class="grid_4">
-                <!--<div class="social_container wow bounceInRight animated">-->
-                <!--<ul>-->
-                <!--<li><a href="#"><img src="images/vk.png"/></a></li>-->
-                <!--<li><a href="#"><img src="images/facebook.png"/></a></li>-->
-                <!--<li><a href="#"><img src="images/twitter.png"/></a></li>-->
-                <!--<li><a href="#"><img src="images/instagram.png"/></a></li>-->
-                <!--<li><a href="#"><img src="images/linkedin.png"/></a></li>-->
-                <!--</ul>-->
-                <!--</div>-->
-            </div>
-        </div>
+    <div class="container"><div class="copyright"><span class="brand">Лайм Медиа</span> &copy; <span id="copyright-year"></span> |
+        <a href="#">Все права защищены</a>
+        <!--<div class="sub-copy">Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>-->
+    </div>
+        <!--<div class="row">-->
+            <!--<div class="grid_8">-->
+                <!---->
+            <!--</div>-->
+            <!--<div class="grid_4">-->
+                <!--&lt;!&ndash;<div class="social_container wow bounceInRight animated">&ndash;&gt;-->
+                <!--&lt;!&ndash;<ul>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#"><img src="images/vk.png"/></a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#"><img src="images/facebook.png"/></a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#"><img src="images/twitter.png"/></a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#"><img src="images/instagram.png"/></a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;<li><a href="#"><img src="images/linkedin.png"/></a></li>&ndash;&gt;-->
+                <!--&lt;!&ndash;</ul>&ndash;&gt;-->
+                <!--&lt;!&ndash;</div>&ndash;&gt;-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
 </footer>
 <div class="hidden">
