--- a/about.html
+++ b/about.html
@@ -7,15 +7,18 @@
     <link rel="icon" href="images/favicon.ico">
     <link rel="shortcut icon" href="images/favicon.ico"/>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css"/>
     <script src="js/jquery.js"></script>
     <script src="js/jquery-migrate-1.1.1.js"></script>
     <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/fancybox/jquery.fancybox.pack.js"></script>
     <script src="js/script.js"></script>
     <script src="js/superfish.js"></script>
     <script src="js/jquery.equalheights.js"></script>
     <script src="js/jquery.mobilemenu.js"></script>
     <script src="js/tmStickUp.js"></script>
     <script src="js/jquery.ui.totop.js"></script>
+    <script src="js/common.js"></script>
     <script>
         $(window).load(function () {
             $().UItoTop({easingType: 'easeOutQuart'});
@@ -36,7 +39,7 @@
     <link rel="stylesheet" media="screen" href="css/ie.css">
     <![endif]-->
 </head>
-<body>
+<body class="page1" id="top">
 <!--==============================
               header
 =================================-->
@@ -62,7 +65,7 @@
                     <div class="navigation ">
                         <nav>
                             <ul class="sf-menu">
-                                <li><a href="index.html">Главная</a></li>
+                                <li ><a href="index.html">Главная</a></li>
                                 <li class="current"><a href="about.html">О нас</a></li>
                                 <li><a href="services.html">Услуги</a></li>
                                 <li><a href="news.html">Новости</a></li>
@@ -72,7 +75,7 @@
                         <div class="contact_header">
                             <ul>
                                 <li class="first">+375 (29) 129-95-14</li>
-                                <li>info@lmedia.by</li>
+                                <li><a href="#mail_to" class="fancybox">info@lmedia.by</a></li>
 
                             </ul>
                         </div>
@@ -231,6 +234,21 @@
         </div>
     </div>
 </footer>
+<div class="hidden">
+    <form id="mail_to" class="pop_form">
+        <h3>Контактная информация</h3>
+        <input type="text" name="name" placeholder="Имя контактного лица" required=""/>
+        <input type="email" name="email" placeholder="Email" required=""/>
+        <input type="text" name="phone" placeholder="Телефон"/>
+
+
+        <!--<textarea rows="5" cols="50" name="struct_site" placeholder="Структура сайта: Главная, О Нас, Услуги(услуга1, услуга2, услуга3), Контакты" required=""></textarea>-->
+        <textarea rows="5" cols="50" name="massage" placeholder="Сообщение" required=""></textarea>
+
+        <button type="submit" class="btn">Отправить</button>
+        <br/>
+    </form>
+</div>
 <a href="#" id="toTop" class="fa fa-chevron-up"></a>
 </body>
 </html>
