--- a/news.html
+++ b/news.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Новости</title>
+<title>Лайм Медиа</title>
 <meta charset="utf-8">
-<meta name="format-detection" content="telephone=no" />
+<meta name="format-detection" content="telephone=no"/>
 <link rel="icon" href="images/favicon.ico">
-<link rel="shortcut icon" href="images/favicon.ico" />
+<link rel="shortcut icon" href="images/favicon.ico"/>
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css"/>
 <script src="js/jquery.js"></script>
-<script src="js/jquery-migrate-1.1.1.js"></script>
+<!--<script src="js/jquery-migrate-1.1.1.js"></script>-->
 <script src="js/jquery.easing.1.3.js"></script>
-<script src="js/script.js"></script> 
+<script src="js/fancybox/jquery.fancybox.pack.js"></script>
+<script src="js/script.js"></script>
 <script src="js/superfish.js"></script>
 <script src="js/jquery.equalheights.js"></script>
 <script src="js/jquery.mobilemenu.js"></script>
 <script src="js/tmStickUp.js"></script>
 <script src="js/jquery.ui.totop.js"></script>
+<script src="js/common.js"></script>
 <script>
- $(window).load(function(){
-  $().UItoTop({ easingType: 'easeOutQuart' });
-  $('#stuck_container').tmStickUp({});  
- }); 
+    $(window).load(function () {
+        $().UItoTop({easingType: 'easeOutQuart'});
+        $('#stuck_container').tmStickUp({});
+    });
 </script>
 <!--[if lt IE 8]>
- <div style=' clear: both; text-align:center; position: relative;'>
-   <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-     <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
-   </a>
+<div style=' clear: both; text-align:center; position: relative;'>
+    <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
+        <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0"
+             height="42" width="820"
+             alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."/>
+    </a>
 </div>
 <![endif]-->
 <!--[if lt IE 9]>
@@ -70,7 +75,7 @@
               <div class="contact_header">
                   <ul>
                       <li class="first">+375 (29) 129-95-14</li>
-                      <li>info@lmedia.by</li>
+                      <li><a href="#mail_to" class="fancybox">info@lmedia.by</a></li>
 
                   </ul>
               </div>
@@ -126,6 +131,21 @@
         </div>
     </div>
 </footer>
+<div class="hidden">
+    <form id="mail_to" class="pop_form">
+        <h3>Контактная информация</h3>
+        <input type="text" name="name" placeholder="Имя контактного лица" required=""/>
+        <input type="email" name="email" placeholder="Email" required=""/>
+        <input type="text" name="phone" placeholder="Телефон"/>
+
+
+        <!--<textarea rows="5" cols="50" name="struct_site" placeholder="Структура сайта: Главная, О Нас, Услуги(услуга1, услуга2, услуга3), Контакты" required=""></textarea>-->
+        <textarea rows="5" cols="50" name="massage" placeholder="Сообщение" required=""></textarea>
+
+        <button type="submit" class="btn">Отправить</button>
+        <br/>
+    </form>
+</div>
 <a href="#" id="toTop" class="fa fa-chevron-up"></a>
 </body>
 </html>
