--- a/service-support.html
+++ b/service-support.html
@@ -7,19 +7,19 @@
     <link rel="icon" href="images/favicon.ico">
     <link rel="shortcut icon" href="images/favicon.ico"/>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animate.css"/>
     <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css"/>
+
     <script src="js/jquery.js"></script>
+    <script src="js/jquery-migrate-1.1.1.js"></script>
+    <!--<script src="js/jquery.easing.1.3.js"></script>-->
+    <script src="js/fancybox/jquery.fancybox.pack.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/superfish.js"></script>
     <script src="js/jquery.equalheights.js"></script>
     <script src="js/jquery.mobilemenu.js"></script>
-    <script src="js/fancybox/jquery.fancybox.pack.js"></script>
-    <script src="js/jquery.mousewheel-3.0.4.pack.js"></script>
-    <script src="js/script.js"></script>
     <script src="js/tmStickUp.js"></script>
     <script src="js/jquery.ui.totop.js"></script>
     <script src="js/common.js"></script>
-    <script src="js/wow.js"></script>
     <script>
         $(window).load(function () {
             $().UItoTop({easingType: 'easeOutQuart'});
@@ -29,7 +29,7 @@
     <!--[if lt IE 8]>
     <div style=' clear: both; text-align:center; position: relative;'>
         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-            <img src="http://storage.ie6countdown.com/assets/100images/banners/warning_bar_0000_us.jpg" border="0"
+            <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0"
                  height="42" width="820"
                  alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."/>
         </a>
@@ -66,7 +66,7 @@
                     <div class="navigation ">
                         <nav>
                             <ul class="sf-menu">
-                                <li><a href="index.html">Главная</a></li>
+                                <li ><a href="index.html">Главная</a></li>
                                 <li><a href="about.html">О нас</a></li>
                                 <li class="current"><a href="services.html">Услуги</a></li>
                                 <li><a href="news.html">Новости</a></li>
@@ -76,7 +76,7 @@
                         <div class="contact_header">
                             <ul>
                                 <li class="first">+375 (29) 129-95-14</li>
-                                <li>info@lmedia.by</li>
+                                <li><a href="#mail_to" class="fancybox">info@lmedia.by</a></li>
 
                             </ul>
                         </div>
@@ -86,22 +86,7 @@
                 </div>
             </div>
         </div>
-        <div class="row hide_submenu">
-            <div class="grid_12 ">
-                <div class="navigation ">
-                    <nav>
-                        <ul class="sf-menu">
-                            <li><a href="#context">Контекстная реклама</a></li>
-                            <li><a href="#smm">SMM</a></li>
-                            <li><a href="#seo">SEO</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </div>
     </section>
-
-
 </header>
 
 <!--=====================
@@ -660,6 +645,19 @@
         <h3>Дополнительная информация</h3>
         <!--<input type="text" name="select_price" placeholder="Оринтировоный бюджет" />-->
         <input type="text" name="know" placeholder="Откуда узнали о нас"/>
+        <button type="submit" class="btn">Отправить</button>
+        <br/>
+    </form>
+    <form id="mail_to" class="pop_form">
+        <h3>Контактная информация</h3>
+        <input type="text" name="name" placeholder="Имя контактного лица" required=""/>
+        <input type="email" name="email" placeholder="Email" required=""/>
+        <input type="text" name="phone" placeholder="Телефон" required=""/>
+
+
+        <!--<textarea rows="5" cols="50" name="struct_site" placeholder="Структура сайта: Главная, О Нас, Услуги(услуга1, услуга2, услуга3), Контакты" required=""></textarea>-->
+        <textarea rows="5" cols="50" name="massage" placeholder="Сообщение" required=""></textarea>
+
         <button type="submit" class="btn">Отправить</button>
         <br/>
     </form>
